--- a/front/package.json
+++ b/front/package.json
@@ -9,12 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.3.3",
+    "@react-navigation/native": "^6.0.12",
+    "@react-navigation/native-stack": "^6.8.0",
     "expo": "~46.0.9",
+    "expo-font": "^10.2.0",
+    "expo-google-fonts": "^0.0.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-hook-form": "^7.34.2",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native-masked-text": "^1.13.0",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
