--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
     "react-native": "0.69.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-web": "~0.18.7",
@@ -28,6 +29,8 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/styled-components": "^5.1.26",
+    "@types/styled-components-react-native": "^5.1.3",
     "typescript": "~4.3.5"
   },
   "private": true
